--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,5 +1,11 @@
 name: Continuous Integration Checks
-on: [push]
+on: 
+  push:
+    branches:
+      - '**'
+    tags:
+      - '**'
+
 jobs:
   build:
     runs-on: ubuntu-latest
